--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Suresh Chidurala"
-      content="My Self Suresh Chidurala , I'm a Web Developer"
+      name="Sai Girija Shankaramanchi"
+      content="This is Sai Girija Shankaramanchi , I'm a Developer"
     />
     <link
       rel="apple-touch-icon"
@@ -95,12 +95,12 @@
     <link rel="manifest" href="./favicon/manifest.json" />
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>| Suresh Chidurala</title>
+    <title>| Sai Girija Shankaramanchi</title>
     <meta name="description" />
     <meta content="" name="keywords" />
     <!-- Favicons -->
-    <link href="assets/img/surya.png" rel="icon" />
-    <link href="assets/img/surya.png" rel="apple-touch-icon" />
+    <link href="assets/img/Saigirija.jpg" rel="icon" />
+    <link href="assets/img/Saigirija.jpg" rel="apple-touch-icon" />
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
