--- a/public/offline.html
+++ b/public/offline.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Suresh Chidurala</title>
+    <title>Sai Girija Shankaramanchi</title>
     <style type="text/css">
       html {
         height: 100%;
@@ -37,7 +37,7 @@
   <body>
     <div class="city">
       <h2 class="city-name">
-        <span>Please go online to check the Suresh Chidurala's portfolio</span>
+        <span>Please go online to check the Sai Girija Shankaramanchi's portfolio</span>
       </h2>
     </div>
   </body>
